--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <!-- Using CDN load for testing purposes. Will switch to full package on project expansion -->
-
+  <div id="c"></div>
   <script src='https://unpkg.com/three/build/three.min.js'></script>
   <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
   <script src="app.js"></script>
