--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 <body>
   <!-- Using CDN load for testing purposes. Will switch to full package on project expansion -->
   <div id="c"></div>
-  <script src='https://unpkg.com/three/build/three.min.js'></script>
-  <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
-  <script src="app.js"></script>
+</div>
+<script src='https://unpkg.com/three/build/three.min.js'></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
+<script src="app.js"></script>
 
+<div id="info">
+  <a href="https://github.com/AlainRusnov" target="_blank" rel="noopener">
+  <img src="./img/githubicon.png" alt="GitHub-Link">
+  </a>
+  <a href="https://www.linkedin.com/in/alain-rusnov-5b89771b7/" target="_blank" rel="noopener">
+  <img src="./img/linkedinicon.png" alt="Linkedin-Link">
+  </a>
+  <a href="" target="_blank" rel="noopener">
+  <img src="./img/contact.png" alt="Contact-Link">
+  </a>
 </body>
 
 </html>
