added vertex overlay mesh for Object intersection on raytrace - tooltip + modal respond but overlay and button listener not responsive

--- a/index.html
+++ b/index.html
@@ -15,16 +15,33 @@
 <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
 <script src="app.js"></script>
 
+<div id="tooltip" style="visibility: hidden"></div>
+
+<div id="modal" style="visibility: hidden">
+  <button id="btn">&times;</button>
+  <h1><a href="https://www.stuud.app" target="_blank" rel="noopener" style="color: white">Stuud</a></h1>
+  <p>Lean CRM platform for professionals and freelancers </br>
+    ( demo account : alex@mail.com  // password : 123456 ) </br>
+    PRESS ESC TO CLOSE
+  </p>
+</div>
+<!-- <div class="overlay hidden"></div> -->
+
+<!-- <div class="project--modal hidden">
+  <button class="btn--close-project--modal">&times;</button>
+</div>-->
+
 <div id="info">
   <a href="https://github.com/AlainRusnov" target="_blank" rel="noopener">
-  <img src="./img/githubicon.png" alt="GitHub-Link">
+    <img src="./img/githubicon.png" alt="GitHub-Link">
   </a>
   <a href="https://www.linkedin.com/in/alain-rusnov-5b89771b7/" target="_blank" rel="noopener">
-  <img src="./img/linkedinicon.png" alt="Linkedin-Link">
+    <img src="./img/linkedinicon.png" alt="Linkedin-Link">
   </a>
   <a href="" target="_blank" rel="noopener">
-  <img src="./img/contact.png" alt="Contact-Link">
+    <img src="./img/contact.png" alt="Contact-Link">
   </a>
+
 </body>
 
 </html>
