added Overlay Vertexes for Object Intersections - raytracing works on all - need to refer sections on individual projects

--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
 
 <div id="modal" style="visibility: hidden">
   <button id="btn">&times;</button>
-  <h1><a href="https://www.stuud.app" target="_blank" rel="noopener" style="color: white">Stuud</a></h1>
-  <p>Lean CRM platform for professionals and freelancers </br>
-    ( demo account : alex@mail.com  // password : 123456 ) </br>
-    PRESS ESC TO CLOSE
+  <div id="stuud">
+  <h1><a href="https://www.stuud.app" target="_blank" rel="noopener" style="color:rgb(236, 116, 3); text-align: center;">www.Stuud.app</a></h1>
+  <p>CRM platform for professionals and freelancers. </br>
+    Features dynamic calendar, invoices, mailer, client tracking, financial charts and accounting data.
+    Project built during LeWagon Bootcamp over 2 weeks. </br>
+    ( demo account : alex@mail.com  // password : 123456 ) </br></br>
+    Ruby on Rails - Javascript - HTML - SASS </br>
+    PostgreSQL - Fullcalendar.js - Chartkick.js
+    <a href="https://github.com/AlainRusnov/Stuud" target="_blank" rel="noopener">
+      <img src="./img/githubicon.png" style="height: 2rem; width: 2rem;" alt="GitHub-Link">
+    </a>
   </p>
+  </div>
+  <div id="gumball-viewer">GB VIEWER <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">Gumball Viewer</a></h1></div>
+  <div id="gumball-bank">BANK <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">Gumball BANK</a></h1></div>
+  <div id="dawg">DAWG <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener" style="color:rgb(223, 69, 69); text-align: center;">Gumball BANK</a></h1></div>
 </div>
 <!-- <div class="overlay hidden"></div> -->
 
