typo on modal index

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </a>
   </p>
   </div>
-  <div id="gumball-viewer">GB VIEWER <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">Gumball Viewer</a></h1></div>
-  <div id="gumball-bank">BANK <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">Gumball BANK</a></h1></div>
-  <div id="dawg">DAWG <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener" style="color:rgb(223, 69, 69); text-align: center;">Gumball BANK</a></h1></div>
+  <div id="gumball-viewer">GB VIEWER <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">www.GumballViewer.app</a></h1></div>
+  <div id="gumball-bank">BANK <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">www.GumballBANK.app</a></h1></div>
+  <div id="dawg">DAWG <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener" style="color:rgb(223, 69, 69); text-align: center;">www.Dawg.app</a></h1></div>
 </div>
 <!-- <div class="overlay hidden"></div> -->
 
