--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <div id="tooltip" style="visibility: hidden"></div>
 
 <div id="modal" style="visibility: hidden">
-  <button id="btn">&times;</button>
   <div id="stuud">
-  <h1><a href="https://www.stuud.app" target="_blank" rel="noopener" style="color:rgb(236, 116, 3); text-align: center;">www.Stuud.app</a></h1>
+    <button id="btn">&times;</button>
+    <h1><a href="https://www.stuud.app" target="_blank" rel="noopener" style="color:rgb(236, 116, 3); text-align: center;">www.Stuud.app</a></h1>
   <p>CRM platform for professionals and freelancers. </br>
     Features dynamic calendar, invoices, mailer, client tracking, financial charts and accounting data.
     Project built during LeWagon Bootcamp over 2 weeks. </br>
@@ -32,9 +32,18 @@
     </a>
   </p>
   </div>
-  <div id="gumball-viewer">GB VIEWER <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">www.GumballViewer.app</a></h1></div>
-  <div id="gumball-bank">BANK <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">www.GumballBANK.app</a></h1></div>
-  <div id="dawg">DAWG <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener" style="color:rgb(223, 69, 69); text-align: center;">www.Dawg.app</a></h1></div>
+
+  <div id="gumballviewer" class="project-link">GumBall Viewer :
+     <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">www.GumballViewer.app</a></h1>
+    </div>
+
+  <div id="gumballbank" class="project-link">GumBall Bank :
+  <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">www.GumballBANK.app</a></h1>
+  </div>
+
+  <div id="dawg" class="project-link"> Dawg :
+    <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener" style="color:rgb(223, 69, 69); text-align: center;">www.Dawg.app</a></h1>
+  </div>
 </div>
 <!-- <div class="overlay hidden"></div> -->
 
