fixed transparency clipping !! - added temp outdoor skybox - need cleaning on window assets - fixed nil.class bug

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Using CDN load for testing purposes. Will switch to full package on project expansion -->
   <div id="c"></div>
-</div>
+
 <script src='https://unpkg.com/three/build/three.min.js'></script>
 <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
 <script src="app.js"></script>
@@ -52,15 +52,18 @@
 </div>-->
 
 <div id="info">
+  Alain Rusnov Portfolio - Work in Progress</br>
+  Left mouse rotate // Right move // Arrow Keys </br>
   <a href="https://github.com/AlainRusnov" target="_blank" rel="noopener">
     <img src="./img/githubicon.png" alt="GitHub-Link">
   </a>
   <a href="https://www.linkedin.com/in/alain-rusnov-5b89771b7/" target="_blank" rel="noopener">
     <img src="./img/linkedinicon.png" alt="Linkedin-Link">
   </a>
-  <a href="" target="_blank" rel="noopener">
+  <a href="mailto::alainrusnov@gmail.com" target="_blank" rel="noopener">
     <img src="./img/contact.png" alt="Contact-Link">
   </a>
+</div>
 
 </body>
 
