--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <script src='https://unpkg.com/three/build/three.min.js'></script>
 <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 <script src="app.js"></script>
 
 <div id="tooltip" style="visibility: hidden"></div>
