placeholder load screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 <script src="app.js"></script>
 
+<section id="loading-screen">
+  <h1>Loading...</h1>
+	<div id="loader"></div>
+  <div id="usage">
+   <h2></br>
+    Hold <span>LEFT</span> mouse button to rotate Camera </br>
+    Hold <span>RIGHT</span> mouse button to MOVE </br>
+    or <span>ARROW</span> keys</h2>
+  </div>
+
+</section>
+
 <div id="tooltip" style="visibility: hidden"></div>
 
 <div id="modal" style="visibility: hidden">
