1 line on load screen placeholder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>Loading...</h1>
 	<div id="loader"></div>
   <div id="usage">
-   <h2></br>
+   <h2>Controls :</br>
     Hold <span>LEFT</span> mouse button to rotate Camera </br>
     Hold <span>RIGHT</span> mouse button to MOVE </br>
     or <span>ARROW</span> keys</h2>
