--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="app.js"></script>
 
 <section id="loading-screen">
-  <h1>Loading...</h1>
+  <h2>Building...</h2>
 	<div id="loader"></div>
   <div id="usage">
    <h2>Controls :</br>
