--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <script src="app.js"></script>
 
 <section id="loading-screen">
-  <h2>Building...</h2>
+  <h2>Alain Rusnov Portfolio</br></br>
+    Loading gallery...</h2>
 	<div id="loader"></div>
   <div id="usage">
    <h2>Controls :</br>
