flat layout coding - not visible

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset=UTF-8 />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <title>Alain Rusnov Portfolio // Proto</title>
-</head>
+  <head>
+    <meta charset=UTF-8 />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Alain Rusnov Portfolio // Proto</title>
+    <script src='https://unpkg.com/three/build/three.min.js' defer></script>
+    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js" defer></script>
+    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js" defer></script>
+    <script src="app.js" defer></script>
+  </head>
 
 <body>
   <!-- Using CDN load for testing purposes. Will switch to full package on project expansion -->
   <div id="c"></div>
 
-<script src='https://unpkg.com/three/build/three.min.js'></script>
-<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
-<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
-<script src="app.js"></script>
 
-<section id="loading-screen">
-  <h2>Alain Rusnov Portfolio</br></br>
-    Loading gallery...</h2>
-	<div id="loader"></div>
-  <div id="usage">
-   <h2>Controls :</br>
-    Hold <span>LEFT</span> mouse button to rotate Camera </br>
+  <section id="loading-screen">
+    <h2>Alain Rusnov Portfolio</br></br>
+      Loading gallery...</h2>
+      <div id="loader"></div>
+      <div id="usage">
+        <h2>Controls :</br></br>
+          Hold <span>LEFT</span> mouse button to rotate Camera </br>
     Hold <span>RIGHT</span> mouse button to MOVE </br>
     or <span>ARROW</span> keys</h2>
   </div>
@@ -35,24 +35,24 @@
   <div id="stuud">
     <button id="btn">&times;</button>
     <h1><a href="https://www.stuud.app" target="_blank" rel="noopener" style="color:rgb(236, 116, 3); text-align: center;">www.Stuud.app</a></h1>
-  <p>CRM platform for professionals and freelancers. </br>
-    Features dynamic calendar, invoices, mailer, client tracking, financial charts and accounting data.
-    Project built during LeWagon Bootcamp over 2 weeks. </br>
-    ( demo account : alex@mail.com  // password : 123456 ) </br></br>
-    Ruby on Rails - Javascript - HTML - SASS </br>
-    PostgreSQL - Fullcalendar.js - Chartkick.js
-    <a href="https://github.com/AlainRusnov/Stuud" target="_blank" rel="noopener">
-      <img src="./img/githubicon.png" style="height: 2rem; width: 2rem;" alt="GitHub-Link">
-    </a>
-  </p>
+    <p>CRM platform for professionals and freelancers. </br>
+      Features dynamic calendar, invoices, mailer, client tracking, financial charts and accounting data.
+      Project built during LeWagon Bootcamp over 2 weeks. </br>
+      ( demo account : alex@mail.com  // password : 123456 ) </br></br>
+      Ruby on Rails - Javascript - HTML - SASS </br>
+      PostgreSQL - Fullcalendar.js - Chartkick.js
+      <a href="https://github.com/AlainRusnov/Stuud" target="_blank" rel="noopener">
+        <img src="./img/githubicon.png" style="height: 2rem; width: 2rem;" alt="GitHub-Link">
+      </a>
+    </p>
   </div>
 
   <div id="gumballviewer" class="project-link">GumBall Viewer :
-     <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">www.GumballViewer.app</a></h1>
-    </div>
+    <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener" style="color:rgb(236, 3, 119); text-align: center;">www.GumballViewer.app</a></h1>
+  </div>
 
   <div id="gumballbank" class="project-link">GumBall Bank :
-  <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">www.GumballBANK.app</a></h1>
+    <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener" style="color:rgb(69, 205, 223); text-align: center;">www.GumballBANK.app</a></h1>
   </div>
 
   <div id="dawg" class="project-link"> Dawg :
