lineup objs/secs

--- a/flat.html
+++ b/flat.html
@@ -36,19 +36,19 @@
   <div id="wrap">
     <div class="n">
       <img class="image-scroll" src="./img/Hero.png" width="60" alt="">
-    </div>
+      Hero</div>
     <div class="n n1">
       <img class="image-scroll" src="./img/stuud.png" width="60" alt="">
-    </div>
+      Stuud</div>
     <div class="n n2">
       <img class="image-scroll" src="./img/gbbank.png" width="60" alt="">
-    </div>
+      Bank</div>
     <div class="n n3">
       <img class="image-scroll" src="./img/gblogo.png" width="60" alt="">
-    </div>
+      Viewer</div>
     <div class="n n4">
       <img class="image-scroll" src="./img/dawg.png" width="60" alt="">
-    </div>
+      Dawg</div>
   </div>
   <div id='block'></div>
   <div id="container"></div>
