--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           Hold <span>LEFT</span> mouse button to rotate Camera </br>
     Hold <span>RIGHT</span> mouse button to MOVE </br>
     or <span>ARROW</span> keys</h2>
+
+    <h2>Click <img src="./img/flat.png"> for FLAT layout</h2>
   </div>
 
 </section>
@@ -68,6 +70,7 @@
 <div id="info">
   Alain Rusnov Portfolio - Work in Progress</br>
   Left mouse rotate // Right move // Arrow Keys </br>
+  Click on Project Portraits for info</br>
   <a href="https://github.com/AlainRusnov" target="_blank" rel="noopener">
     <img src="./img/githubicon.png" alt="GitHub-Link">
   </a>
@@ -76,6 +79,9 @@
   </a>
   <a href="mailto::alainrusnov@gmail.com" target="_blank" rel="noopener">
     <img src="./img/contact.png" alt="Contact-Link">
+  </a>
+  <a href="https://alainrusnov.github.io/portfolio/flat.html" target="_blank" rel="noopener">
+    <img src="./img/flat.png" alt="Flat-Link">
   </a>
 </div>
 
