--- a/flat.html
+++ b/flat.html
@@ -4,82 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <style>
-    body {
-      overflow: hidden;
-    }
-    .n{
-      display: flex;
-      justify-content:
-      space-evenly;
-      z-index: 1;
-      position: absolute;
-      top: 100px;
-      width: 300px;
-      height: 50px;
-      background: rgba(2, 2, 2, 0.30);
-      border-radius: 4px;
-      /* backdrop-filter: blur(50px);
-      -webkit-backdrop-filter: blur(50px); */
-    }
-    .n1{display: flex; justify-content:space-evenly;z-index: 1; position: absolute; top: 200px; background: rgba(231, 99, 11, 0.4);}
-    .n2{display: flex; justify-content:space-evenly;position: absolute; top: 300px; background: rgba(165, 164, 164, 0.4);}
-    .n3{display: flex; justify-content:space-evenly;position: absolute;top: 400px; background: rgba(231, 78, 198, 0.4);}
-    .n4{display: flex; justify-content:space-evenly;position: absolute;top: 500px; background: rgba(61, 214, 241, 0.4);}
-    #block{
-      height: 50px;
-      width: 50px;
-      position: absolute;
-      background: red;
-      z-index: 1;
-      /* visibility: hidden; */
-      display: none;
-    }
-    #container{
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -100;
-      /* pointer-events: none; */
-      background: linear-gradient(whitesmoke, rgba(255, 255, 255, 0.5));
-    }
-    ul {
-      width: 3vw;
-      position: fixed;
-      top: 0;
-      right: 0;
-      z-index: 100;
-      /* border: 1px solid black; */
-      list-style: none;
-      margin: 2vw;
-      padding: 0;
-      border-radius: 3px;
-    }
-    li {
-      font-size: 25px;
-      height: 4vh;
-      border: 1px solid rgb(0, 0, 0, 0.5);
-      background-color:  rgb(52, 108, 160, 0.4);
-      border-radius: 3px;
-    }
-    li:hover{
-      background-color: rgb(241, 241, 241);
-      border: 2px solid rgb(50, 20, 220, 0.6);
-    }
-    .nav{
-      top: 10vh;
-      margin-right: 3vw;
-    }
-    #portfolio{
-      display: flex;
-      justify-content: flex-end;
-      text-align: right;
-      margin-right: 2vw;
-
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="flat.css" />
 </head>
 <body>
   <div id="portfolio">
