redisplay on block refer

--- a/flat.html
+++ b/flat.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" type="text/css" href="flat.css" />
+  <script src='https://unpkg.com/three/build/three.min.js' defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous" defer></script>
+  <script src="flat.js" defer></script>
 </head>
 <body>
   <div id="portfolio">
-    <h2>Alain Rusnov </br>portfolio</h2>
+    <h2>Alain Rusnov </br>// portfolio // proto layout</h2>
   </div>
   <ul class="nav">
   <li data-nav="0"></li>
@@ -35,10 +38,7 @@
       <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener"><h3>Dawg</h3></a>
     </div>
   </div>
-  <!-- <div id="block"></div> -->
+  <div id="block"></div>
   <div id="container"></div>
-  <script src='https://unpkg.com/three/build/three.min.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>"
-  <script src="flat.js"></script>
 </body>
 </html>
