--- a/flat.html
+++ b/flat.html
@@ -23,7 +23,8 @@
   <div id="wrap">
     <div class="n">
       <img class="image-scroll" src="./img/Herox.png" width="60" alt="">
-      <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h3>Portfolio gallery</h3></a></div>
+      <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h3>Portfolio gallery</h3></a>
+    </div>
       <div class="n n1">
       <img class="image-scroll" src="./img/stuudx.png" width="60" alt="">
       <a href="http://www.stuud.app" target="_blank" rel="noopener"><h3>www.Stuud.app</h3></a></div>
