--- a/flat.html
+++ b/flat.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="portfolio">
-    <h2>Alain Rusnov </br>// portfolio // proto layout</h2>
+    <h2>Alain Rusnov </br>// portfolio </br>// prototype placeholder layout</h2>
   </div>
   <ul class="nav">
   <li data-nav="0"></li>
@@ -21,22 +21,33 @@
   <li data-nav="4"></li>
   </ul>
   <div id="wrap">
-    <div class="n">
-      <img class="image-scroll" src="./img/Herox.png" width="60" alt="">
-      <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h3>Portfolio gallery</h3></a>
+    <div class="n" style="visibility:hidden">
+      <img class="image-scroll" src="./img/Herox.png" width="60" alt="" style="display: none">
+      <h2>Portfolio gallery XR</h2>
+    </p> Three.js - GSAP - GLSL </p>
+      <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h4>portfolio gallery</h4></a>
     </div>
-      <div class="n n1">
-      <img class="image-scroll" src="./img/stuudx.png" width="60" alt="">
-      <a href="http://www.stuud.app" target="_blank" rel="noopener"><h3>www.Stuud.app</h3></a></div>
-    <div class="n n2">
-      <img class="image-scroll" src="./img/gbbankx.png" width="60" alt="">
-      <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener"><h3>GumballBank</h3></a></div>
-    <div class="n n3">
-      <img class="image-scroll" src="./img/gblogox.png" width="60" alt="">
-      <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener"><h3>Viewer</h3></a></div>
-    <div class="n n4">
-      <img class="image-scroll" src="./img/dawgx.png" width="60" alt="">
-      <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener"><h3>Dawg</h3></a>
+      <div class="n n1" style="visibility:hidden">
+        <img class="image-scroll" src="./img/stuudx.png" width="60" alt="" style="display: none">
+      <h2 style="color: orange;">Stuud</h2>
+    </p> Lean CRM for freelancers</br>
+    ruby on rails, postgresql, SASS, calendar js, chartkick js </p>
+      <a href="http://www.stuud.app" target="_blank" rel="noopener"><h4>www.stuud.app</h4></a></div>
+    <div class="n n2" style="visibility:hidden">
+      <img class="image-scroll" src="./img/gbbankx.png" width="60" alt="" style="display: none">
+      <h2>Gumball Bank</h2>
+    </p> SPA financial institution landing page </br> and account demo </br> vanilla JS - html - css </p>
+      <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener"><h4>gumballbank</h4></a></div>
+    <div class="n n3" style="visibility:hidden">
+      <img class="image-scroll" src="./img/gblogox.png" width="60" alt="" style="display: none">
+      <h2 style="color: #FF00FF;">Gumball Viewer</h2>
+    </p> picture feed viewer à la snapchat </br> React - firebase - firestore </p>
+      <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener"><h4>viewer</h4></a></div>
+    <div class="n n4" style="visibility:hidden">
+      <img class="image-scroll" src="./img/dawgx.png" width="60" alt="" style="display: none">
+      <h2 style="color: rgb(66, 139, 235);">DAWG</h2>
+    </p> Dog rental marketplace app </br> ruby on rails - mysql - SASS - html </p>
+      <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener"><h4>dawg</h4></a>
     </div>
   </div>
   <div id="block"></div>
