tested blocks - set static

--- a/flat.html
+++ b/flat.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="portfolio">
-    <h2>Alain Rusnov </br>// portfolio </br>// prototype placeholder layout</h2>
+    <h2 style="color: azure;">Alain Rusnov </br>// portfolio </br>// prototype placeholder layout</h2>
   </div>
   <ul class="nav">
   <li data-nav="0"></li>
