--- a/flat.html
+++ b/flat.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" type="text/css" href="flat.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Ubuntu&display=swap" rel="stylesheet">
   <script src='https://unpkg.com/three/build/three.min.js' defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous" defer></script>
   <script src="flat.js" defer></script>
@@ -13,6 +18,7 @@
   <div id="portfolio">
     <h2 style="color: azure;">Alain Rusnov </br>// portfolio </br>// prototype placeholder layout</h2>
   </div>
+  <div data-aos="fade-in">
   <ul class="nav">
   <li data-nav="0"></li>
   <li data-nav="1"></li>
@@ -20,37 +26,51 @@
   <li data-nav="3"></li>
   <li data-nav="4"></li>
   </ul>
+  </div>
   <div id="wrap">
+    <div data-aos="fade-right">
     <div class="n" style="visibility:hidden">
       <img class="image-scroll" src="./img/Herox.png" width="60" alt="" style="display: none">
-      <h2>Portfolio gallery XR</h2>
-    </p> Three.js - GSAP - GLSL </p>
-      <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h4>portfolio gallery</h4></a>
+      <h2 style="color: rgb(241, 196, 47); font-size: 30px;">Portfolio Gallery XR</h2>
+    <p style="font-family: 'Ubuntu', sans-serif; color: azure;"> Immersive web concept showcasing projects in an innovative environment. </br>
+      // Three.js - GSAP - GLSL //</p>
+      <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h4>gallery</h4></a>
     </div>
-      <div class="n n1" style="visibility:hidden">
+
+    <div class="n n1" style="visibility:hidden">
         <img class="image-scroll" src="./img/stuudx.png" width="60" alt="" style="display: none">
-      <h2 style="color: orange;">Stuud</h2>
-    </p> Lean CRM for freelancers</br>
-    ruby on rails, postgresql, SASS, calendar js, chartkick js </p>
+      <h2 style="color: orange;">STUUD</h2>
+    <p style="color: azure;"> Lean CRM for freelancers</br>
+    [ demo account : alex@mail.com ]</br>[ password: 123456 ] </br>
+    // ruby on rails, postgresql, SASS, calendar js, chartkick js //</p>
       <a href="http://www.stuud.app" target="_blank" rel="noopener"><h4>www.stuud.app</h4></a></div>
+
     <div class="n n2" style="visibility:hidden">
       <img class="image-scroll" src="./img/gbbankx.png" width="60" alt="" style="display: none">
-      <h2>Gumball Bank</h2>
-    </p> SPA financial institution landing page </br> and account demo </br> vanilla JS - html - css </p>
+      <h2 style="font-family: 'neon_80sregular'; color: rgb(241, 33, 113);font-size: 30px;">Gumball Bank</h2>
+    <p style="color: azure;"> SPA financial institution landing page </br> and account demo. </br>// vanilla JS - html - css //</p>
       <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener"><h4>gumballbank</h4></a></div>
+
     <div class="n n3" style="visibility:hidden">
       <img class="image-scroll" src="./img/gblogox.png" width="60" alt="" style="display: none">
-      <h2 style="color: #FF00FF;">Gumball Viewer</h2>
-    </p> picture feed viewer à la snapchat </br> React - firebase - firestore </p>
+      <h2 style="color: #FF00FF;font-size: 30px;">Gumball Viewer</h2>
+    <p style="color: azure;"> Picture viewer feed à la snapchat. </br>// React - firebase - firestore //</p>
       <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener"><h4>viewer</h4></a></div>
+
     <div class="n n4" style="visibility:hidden">
       <img class="image-scroll" src="./img/dawgx.png" width="60" alt="" style="display: none">
-      <h2 style="color: rgb(66, 139, 235);">DAWG</h2>
-    </p> Dog rental marketplace app </br> ruby on rails - mysql - SASS - html </p>
+      <h2 style="color: rgb(95, 229, 246);font-size: 30px;">DAWG</h2>
+    <p style="color: azure;"> Dog rental marketplace app. </br>// ruby on rails - mysql - SASS - html //</p>
       <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener"><h4>dawg</h4></a>
     </div>
+    </div>
   </div>
-  <div id="block"></div>
+
+  <!-- <div id="block"></div> -->
   <div id="container"></div>
+  <script src="https://unpkg.com/aos@next/dist/aos.js" ></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
