info adj. scroller items adj.

--- a/flat.html
+++ b/flat.html
@@ -28,15 +28,17 @@
   </ul>
   </div>
   <div id="wrap">
-    <div data-aos="fade-right">
+    <div data-aos="fade-right" data-aos-offset="300">
     <div class="n" style="visibility:hidden">
       <img class="image-scroll" src="./img/Herox.png" width="60" alt="" style="display: none">
       <h2 style="color: rgb(241, 196, 47); font-size: 30px;">Portfolio Gallery XR</h2>
-    <p style="font-family: 'Ubuntu', sans-serif; color: azure;"> Immersive web concept showcasing projects in an innovative environment. </br>
+    <p style="font-family: 'Ubuntu', sans-serif; color: azure;"> Immersive web concept showcasing projects in a virtual gallery environment. </br>
       // Three.js - GSAP - GLSL //</p>
       <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h4>gallery</h4></a>
+    <!-- </div> -->
     </div>
 
+    <!-- <div data-aos="fade-right" data-aos-offset="0"> -->
     <div class="n n1" style="visibility:hidden">
         <img class="image-scroll" src="./img/stuudx.png" width="60" alt="" style="display: none">
       <h2 style="color: orange;">STUUD</h2>
@@ -44,24 +46,31 @@
     [ demo account : alex@mail.com ]</br>[ password: 123456 ] </br>
     // ruby on rails, postgresql, SASS, calendar js, chartkick js //</p>
       <a href="http://www.stuud.app" target="_blank" rel="noopener"><h4>www.stuud.app</h4></a></div>
+    <!-- </div> -->
 
+    <!-- <div data-aos="fade-right" data-aos-offset="0"> -->
     <div class="n n2" style="visibility:hidden">
       <img class="image-scroll" src="./img/gbbankx.png" width="60" alt="" style="display: none">
       <h2 style="font-family: 'neon_80sregular'; color: rgb(241, 33, 113);font-size: 30px;">Gumball Bank</h2>
     <p style="color: azure;"> SPA financial institution landing page </br> and account demo. </br>// vanilla JS - html - css //</p>
       <a href="https://alainrusnov.github.io/GumBall-Bank/" target="_blank" rel="noopener"><h4>gumballbank</h4></a></div>
+    <!-- </div> -->
 
+    <!-- <div data-aos="fade-right" data-aos-offset="150"> -->
     <div class="n n3" style="visibility:hidden">
       <img class="image-scroll" src="./img/gblogox.png" width="60" alt="" style="display: none">
       <h2 style="color: #FF00FF;font-size: 30px;">Gumball Viewer</h2>
     <p style="color: azure;"> Picture viewer feed à la snapchat. </br>// React - firebase - firestore //</p>
       <a href="https://ghost-dev-28501.web.app/" target="_blank" rel="noopener"><h4>viewer</h4></a></div>
+    <!-- </div> -->
 
+    <!-- <div data-aos="fade-right" data-aos-offset="150"> -->
     <div class="n n4" style="visibility:hidden">
       <img class="image-scroll" src="./img/dawgx.png" width="60" alt="" style="display: none">
       <h2 style="color: rgb(95, 229, 246);font-size: 30px;">DAWG</h2>
     <p style="color: azure;"> Dog rental marketplace app. </br>// ruby on rails - mysql - SASS - html //</p>
       <a href="https://dawg-lewagon.herokuapp.com/" target="_blank" rel="noopener"><h4>dawg</h4></a>
+    <!-- </div> -->
     </div>
     </div>
   </div>
