--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <img src="./img/contact.png" alt="Contact-Link">
   </a>
   <a href="https://alainrusnov.github.io/portfolio/flat.html" target="_blank" rel="noopener">
-    <img src="./img/flat.png" alt="Flat-Link">
+    <img src="./img/flat.png" alt="Flat-Link"> &LeftArrow; Flat site layout
   </a>
 </div>
 
