text column shaders adj

--- a/flat.html
+++ b/flat.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="portfolio">
-    <h2 style="color: azure;">Alain Rusnov </br>// portfolio </br>// prototype placeholder layout</h2>
+    <h2 style="color: azure;">Alain Rusnov </br>// portfolio </br>// prototype layout</h2>
   </div>
   <div data-aos="fade-in">
   <ul class="nav">
