scroller - column resize adj on shaders

--- a/flat.html
+++ b/flat.html
@@ -31,7 +31,7 @@
     <div data-aos="fade-right" data-aos-offset="300">
     <div class="n" style="visibility:hidden">
       <img class="image-scroll" src="./img/Herox.png" width="60" alt="" style="display: none">
-      <h2 style="color: rgb(241, 196, 47); font-size: 30px;">Portfolio Gallery XR</h2>
+      <h2 style="color: rgb(241, 196, 47); font-size: 30px;">PORTFOLIO GALLERY.XR</h2>
     <p style="font-family: 'Ubuntu', sans-serif; color: azure;"> Immersive web concept showcasing projects in a virtual gallery environment. </br>
       // Three.js - GSAP - GLSL //</p>
       <a href="https://alainrusnov.github.io/portfolio/"target="_blank" rel="noopener"><h4>gallery</h4></a>
